Create lang select + add it to app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   />
   <h2>Welcome</h2>
   <div class="spacer"></div>
-  <p>Lang select</p>
+  <app-lang-select></app-lang-select>
 </div>
 
 <div class="content" role="main">
@@ -75,17 +75,13 @@
   }
 
   .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
+    height: auto;
     display: flex;
     align-items: center;
     background-color: #1976d2;
     color: white;
     font-weight: 600;
-    padding: 0 16px;
+    padding: 8px 16px 0;
   }
 
   .toolbar img {
