Add i18n on home and lang selector

--- a/src/app/lang-select/lang-select.component.html
+++ b/src/app/lang-select/lang-select.component.html
@@ -1,7 +1,7 @@
 <mat-form-field appearance="fill">
-    <mat-label>Lang</mat-label>
-    <mat-select [(value)]="selected">
-        <mat-option value="option1">French</mat-option>
-        <mat-option value="option2">English</mat-option>
-    </mat-select>
+  <mat-label i18n="@@lang.title">Lang</mat-label>
+  <mat-select [(value)]="selected">
+    <mat-option value="option1" i18n="@@lang.fr">French</mat-option>
+    <mat-option value="option2" i18n="@@lang.en">English</mat-option>
+  </mat-select>
 </mat-form-field>
